# unreal-mcp-bridge

./: .gitattributes  .gitignore  LICENSE  README.md
Plugin/UnrealMCPBridge/: UnrealMCPBridge.uplugin
Plugin/UnrealMCPBridge/Source/UnrealMCPBridge/: UnrealMCPBridge.Build.cs
Plugin/UnrealMCPBridge/Source/UnrealMCPBridge/Private/: MCPBridgeSubsystem.cpp  MCPCommandRegistry.cpp  MCPGraphEditLibrary.cpp  MCPProtocol.cpp  MCPServerRunnable.cpp  MCPSettings.cpp  UnrealMCPBridgeModule.cpp
Plugin/UnrealMCPBridge/Source/UnrealMCPBridge/Private/Commands/: AnimGraphCommands.cpp  AnimNotifyCommands.cpp  AssetCommands.cpp  BlueprintCommands.cpp  CameraRigCommands.cpp  CameraVariableCommands.cpp  CommandJsonHelpers.h  CompileCommands.cpp  EditorCommands.cpp  PIECommands.cpp  StateTreeCommands.cpp
Plugin/UnrealMCPBridge/Source/UnrealMCPBridge/Public/: IMCPCommandHandler.h  MCPBridgeSubsystem.h  MCPCommandRegistry.h  MCPGraphEditLibrary.h  MCPProtocol.h  MCPServerRunnable.h  MCPSettings.h  UnrealMCPBridgeModule.h
Plugin/UnrealMCPBridge/Source/UnrealMCPBridge/Public/Commands/: AnimGraphCommands.h  AnimNotifyCommands.h  AssetCommands.h  BlueprintCommands.h  CameraRigCommands.h  CameraVariableCommands.h  CompileCommands.h  EditorCommands.h  PIECommands.h  (+1 more)
Python/: README.md  pyproject.toml
Python/tests/: test_protocol.py
Python/unreal_mcp_bridge/: config.py  connection.py  server.py
Python/unreal_mcp_bridge/tools/: __init__.py  animgraph.py  animnotify.py  asset.py  blueprint.py  camerarig.py  camvar.py  compile.py  editor.py  pie.py  statetree.py
docs/: PROTOCOL.md
