[project]
name = "unreal-mcp-bridge"
version = "0.1.0"
description = "MCP server bridging to Unreal Editor via JSON-RPC 2.0"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.4",
  "fastmcp>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0"
]

[project.scripts]
unreal-mcp-bridge = "unreal_mcp_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unreal_mcp_bridge"]
